# ethscan

./: .gitignore  .gitmodules  BUILD.bazel  Makefile  README.md  deps.bzl  go.mod  go.sum  index.yaml  pyproject.toml
.github/workflows/: helm.yaml  test.yaml
api/docs/: docs.go  swagger.json  swagger.yaml
cmd/activity/consumer/: main.go  service.go  wire.go  wire_gen.go
cmd/activity/grpc/: main.go  wire.go  wire_gen.go
cmd/activity/restful/: main.go  service.go  wire.go  wire_gen.go
cmd/block/cronjob/: main.go  service.go  wire.go  wire_gen.go
cmd/block/restful/: main.go  wire.go  wire_gen.go
cmd/cronjob/block/: cronjob.go  main.go  service.go  wire.go  wire_gen.go
cmd/grpc/activity/: grpc.go  main.go  service.go  wire.go  wire_gen.go
cmd/kafka/activity/: kafka.go  main.go  service.go  wire.go  wire_gen.go
cmd/restful/activity/: main.go  restful.go  service.go  wire.go  wire_gen.go
cmd/restful/block/: main.go  restful.go  service.go  wire.go  wire_gen.go
configs/block/restful/: example.yaml
configs/cronjob/block/: example.yaml
configs/kafka/activity/: example.yaml
configs/restful/activity/: example.yaml
deployments/: Dockerfile
deployments/terraform/: .terraform.lock.hcl  dns.tf  variables.tf  versions.tf
internal/pkg/errorx/: 400.go  (+1 more)
pkg/adapters/: adapters.go
pkg/app/: mock_Service.go  service.go
pkg/contextx/: contextx.go  middlewares.go
pkg/er/: middlewares.go
pkg/grpcx/: grpcx.go  mock_Client.go  mock_Server.go
pkg/httpx/: mock_Client.go  mock_Server.go
scripts/: go.test.sh
test/e2e/: .gitignore  pyproject.toml
(+120 files in other folders)
